<resources>
    <string name="app_name">Sport Fanatic</string>

    <!-- Main Source Code Start From Here -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Sport News</string>
    <string name="slide_1_desc">The easiest way to read all the internation sport news!</string>

    <string name="slide_2_title">Find Court</string>
    <string name="slide_2_desc">Check out nearby court and play your favourite game!</string>

    <string name="slide_3_title">Available Booking</string>
    <string name="slide_3_desc">Check out the available booking with time and price!</string>

    <string name="slide_4_title">Customer Service</string>
    <string name="slide_4_desc">Use emergency phonebook to contact us if you need our help! </string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Simant Dhakal</string>
    <string name="nav_header_subtitle">Simant.dhakal@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Action Menu</string>

    <string name="nav_sport">Sport</string>
    <string name="nav_news">News</string>
    <string name="nav_home">Home</string>
    <string name="nav_event">Event</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_job">Jobs</string>
    <string name="title_activity_section">Section</string>
    <string name="title_activity_bottom">Bottom</string>
    <string name="title_home">Sport Fanatic</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_futsal">FutsalActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- login and register field -->
    <string name="welcome">Welcome to "\n" Sport Fanatic</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
</resources>
